# soshari

./: .gitignore  Cargo.toml
soshari_macros/: Cargo.toml
soshari_macros/src/: lib.rs
soshari_macros/tests/: 01-simple-proc.rs  progress.rs
src/: main.rs
src/commands/: johari.rs  mod.rs  nohari.rs  util.rs
