[package]
name = "soshari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { branch = "next", git = "https://github.com/serenity-rs/serenity", features = ["client",  "builder", "cache", "collector", "gateway", "rustls_backend" ]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
dotenv_codegen = "0.15.0"
bitflags = "1.3.2"
itertools = "0.10.5"
paste = "1.0.9"
soshari_macros = { path = "./soshari_macros" }
[workspace]
members = ["soshari_macros"]