[package]
name = "soshari_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["derive"] }
trybuild = "1.0.61"
bitflags = "1.3.2"
serde = { version = "1.0.147", features = ["derive"] }
[lib]
proc-macro = true